# sfml-breakout

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  app.cc
data/: config.ini
include/game/: ball.hh  command.hh  game_object.hh  move_ball_command.hh  move_player_command.hh  player.hh
include/utils/: console.hh
src/: CMakeLists.txt
src/game/: CMakeLists.txt  ball.cc  command.cc  game_object.cc  move_ball_command.cc  move_player_command.cc  player.cc
src/utils/: CMakeLists.txt  console.cc
tests/: CMakeLists.txt
tests/utils/: CMakeLists.txt  test_console.cc
